index: contact address & tel
Signed-off-by: Du Huanpeng <u74147@gmail.com>

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ du@book64:~/t-kernel/tkernel_source$ make</code></pre></p>
 
 <h3>联系方式</h3>
 <p><ul>
-  <li>广东省汕头市澄海区莲上镇涂城乡苏湾中学门口</li>
-  <li>移动电话：(+86)13719074147</li>
+  <li>地址：广东省汕头市澄海区莲上镇涂城乡苏湾中学门口</li>
+  <li>电话：(+86)13719074147</li>
 </ul></p>
         </section>
 
