--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="main_content">
           <h3>欢迎来到 Open T-Kernel 的主页</h3>
 
-<p>Open T-Kernel 是基于 T-Kernel 改进而来的，功能上基本没有增加或减少，主要对原版的编译进行改进，对代码的可维护性，可移植性进行改进。</p>
+<p>Open T-Kernel 是基于 T-Kernel 改进而来的，功能上基本没有增加或减少，主要对原版的编译方式进行改进，重构或整理代码，重点改进可维护性，可移植性。</p>
 
 <h3>关于 Open T-Kernel 目标</h3>
 
