index: change eamil
Signed-off-by: Du Huanpeng <u74147@gmail.com>

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ du@book64:~/t-kernel/tkernel_source$ make</code></pre></p>
   <ul>
     <li>修改代码、文档，并寄送至 t-kernel@hotmail.com</li>
     <li>捐赠物资，现金、域名费用，开发板、新旧电脑或配件，生活用品等等</li>
-    <li>使用 Open T-Kernel到产品中去，并提出需求与改进建议</li>
+    <li>使用 Open T-Kernel 到产品中去，并提出需求与改进建议</li>
   </ul>
 </p>
 
@@ -74,7 +74,7 @@ du@book64:~/t-kernel/tkernel_source$ make</code></pre></p>
 <p><ul>
   <li>地址：广东省汕头市澄海区莲上镇涂城乡苏湾中学门口</li>
   <li>电话：(+86)13719074147</li>
-  <li>邮件：t-kernel@hotmail.com</li>
+  <li>邮件：u74147@gmail.com</li>
 </ul></p>
         </section>
 
