--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ du@book64:~/t-kernel/tkernel_source$ make</code></pre></p>
 </p>
 
 <h3>技术支持</h3>
-<p>对于关于 Open T-Kernel 任何问题，欢迎以电子邮件或电话联系，本项目以研究为主，请尽量不要咨询商用事务。</p>
+<p>对于关于 Open T-Kernel 任何问题，欢迎以电子邮件或电话联系。</p>
 
 <h3>兴趣与爱好</h3>
 <p>我喜欢骑车，虽然近来有点不舒服骑不了，但相信以后会去骑遍中国的。欢迎骑车来我家做客，汕头有好吃的牛肉丸，欢迎寄送土特产到我家。</p>
