--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Open T-Kernel</h1>
-          <h2>the Open T-Kernel home page.</h2>
+          <h2>A better T-Kernel fork.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
