--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="main_content">
           <h3>欢迎来到 Open T-Kernel 的主页</h3>
 
-<p>Open T-Kernel 是 T-Kernel 的一个分支，功能上基本没有增加或减少，主要对原版的编译方式进行改进，重构或整理代码，重点改进可维护性，可移植性。</p>
+<p>Open T-Kernel 是 T-Kernel 的一个分支，功能上基本没有增加或减少，主要对原版的编译方式进行改进，使用 KBuild 构建。KBuild 是 Linux 内核的构建配置系统。重构或整理代码，使目录结构更清淅，分离硬件相关代码。重点改进可维护性，可移植性和安全性。</p>
 
 <h3>关于 Open T-Kernel 目标</h3>
 
