--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
         <section id="main_content">
           <h3>欢迎来到 Open T-Kernel 的主页</h3>
 
-<p>Open T-Kernel 是 T-Kernel 的一个分支，功能上基本没有增加或减少，主要对原版的编译方式进行改进，使用 KBuild 构建。KBuild 是 Linux 内核的构建配置系统。重构或整理代码，使目录结构更清淅，分离硬件相关代码。重点改进可维护性，可移植性和安全性。</p>
+<p>Open T-Kernel 是 T-Kernel 的一个分支，功能上基本没有增加或减少，主要对原版的编译方式进行改进，使用 KBuild 构建。KBuild 是 <a href="http://www.kernel.org">Linux</a> 内核的构建配置系统。重构或整理代码，使目录结构更清淅，分离硬件相关代码。重点改进可维护性，可移植性和安全性。</p>
 
 <h3>关于 Open T-Kernel 目标</h3>
 
 <p>
   <ul>
-    <li>使用 KBuild 进行编译。</li>
-    <li>符合 ANSI C，参考 MISRAC 标准。</li>
+    <li>使用 KBuild 进行编译和配置。</li>
+    <li>代码可移植性好，安全性高，符合 ANSI C，并参考 MISRAC 标准。</li>
+    <li>代码整洁易读，易于维护。</li>
     <li>支持 ARM ARM926EJ-S，CORTEX-R4，CORTEX-A8 核心。</li>
-    <li>支持龙芯 LS232。</li>
+    <li>支持龙芯 GS232。</li>
     <li>支持 MIPS mips32 24kc。</li>
+    <li>接收社区代码</li>
   </ul>
 </p>
 
@@ -72,7 +74,7 @@ du@book64:~/t-kernel/tkernel_source$ make</code></pre></p>
 
 <h3>联系方式</h3>
 <p><ul>
-  <li>地址：广东省汕头市澄海区莲上镇涂城乡苏湾中学门口</li>
+  <li>地址：广东省汕头市澄海区莲上镇涂城乡苏湾中学南侧</li>
   <li>电话：(+86)13719074147</li>
   <li>邮件：u74147@gmail.com</li>
 </ul></p>
